<resources>
    <string name="app_name">lab2</string>

    <string name="change_background">CHANGE BACKGROUND</string>

    <string name="text_to_speech">TEXT TO SPEECH</string>
    <string name="speak">Speak</string>
    <string name="back">Back</string>
    <string name="enter_text">Please enter some text</string>

    <string name="api_version">API VERSION</string>

    <string name="serial_number">SERIAL NUMBER</string>
</resources>